--- a/MathForGames/MathForGames.csproj
+++ b/MathForGames/MathForGames.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="Raylib-cs" Version="3.1.5" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MathLib\MathLib.csproj" />
+  </ItemGroup>
+
 </Project>
